--- a/app/src/main/res/layout/bot_msg_rv_item.xml
+++ b/app/src/main/res/layout/bot_msg_rv_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="@dimen/_4sdp" >
 
@@ -11,24 +11,25 @@
         android:layout_height="@dimen/_25sdp"
         android:background="@drawable/background_image"
         android:scaleType="centerCrop"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/idTVBot"
+        app:layout_constraintStart_toStartOf="parent"
         app:riv_oval="true" />
 
     <TextView
+        android:id="@+id/idTVBot"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/idTVBot"
-        android:text="@string/bot_message"
-        android:textColor="@color/white"
-        android:textSize="@dimen/_13ssp"
-        android:padding="@dimen/_12sdp"
         android:layout_marginStart="@dimen/_4sdp"
         android:layout_marginLeft="@dimen/_4sdp"
         android:background="@drawable/background_received_message"
+        android:linksClickable="true"
+        android:padding="@dimen/_12sdp"
+        android:text="@string/bot_message"
+        android:textColor="@color/white"
+        android:textIsSelectable="true"
+        android:textSize="@dimen/_13ssp"
         app:layout_constraintStart_toEndOf="@id/imageProfile"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.75" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textDateTime"
