--- a/app/src/main/res/layout/user_msg_rv_item.xml
+++ b/app/src/main/res/layout/user_msg_rv_item.xml
@@ -1,21 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="@dimen/_4sdp" >
+    android:padding="@dimen/_4sdp"
+    android:layout_gravity="end"
+    android:layout_margin="5dp"
+    android:elevation="8dp"
+    app:cardCornerRadius="10dp">
 
     <TextView
         android:id="@+id/idTVUser"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/background_sent_message"
+        android:linksClickable="true"
         android:padding="@dimen/_12sdp"
-        android:textSize="@dimen/_13sdp"
+        android:text="@string/user_message"
         android:textColor="@color/white"
+        android:textIsSelectable="true"
+        android:textSize="@dimen/_13ssp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.8"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textDateTime"
