--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,8 @@
 
     <style name="Theme.ThinkChat" parent="Theme.AppCompat.Light.NoActionBar">
     <item name="android:colorPrimary">@color/primary</item>
-    <item name="android:statusBarColor" tools:targetApi="l">@color/primary</item></style>
+    <item name="android:statusBarColor" >@color/primary</item></style>
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.MaterialComponents.Light" />
 
 </resources>
